welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:1: error: Missing closing brace `}' assumed here
def blueTicket(a:Int, b:Int, c:Int):Int = {
^